Simulator now outputs array containing information on drone status and position

--- a/swarmulator.ipynb
+++ b/swarmulator.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,9 +212,15 @@
     "        #self.direction = random.randint(0,43) / 7\n",
     "        self.force = 10\n",
     "\n",
+    "        self.l = self.rect.left\n",
+    "        self.top = self.rect.top\n",
+    "\n",
     "    def update(self):\n",
     "\n",
-    "        if self.mode==1:\n",
+    "        if self.mode==0:\n",
+    "            self.direction=0\n",
+    "            self.force=0\n",
+    "        elif self.mode==1:\n",
     "            self.direction = random.randint(0,43) / 7\n",
     "            self.force = 10\n",
     "        elif self.mode==2:\n",
@@ -234,6 +240,9 @@
     "            self.rect.top = 0\n",
     "        if self.rect.bottom >= SCREEN_HEIGHT:\n",
     "            self.rect.bottom = SCREEN_HEIGHT\n",
+    "\n",
+    "        self.l = self.rect.left\n",
+    "        self.t = self.rect.top\n",
     "\n",
     "class Goal(pygame.sprite.Sprite):\n",
     "    def __init__(self, x, y, z):\n",
@@ -312,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,6 +335,8 @@
     "\n",
     "    screen = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
     "\n",
+    "    posarr = np.zeros((maxlen,6,3))\n",
+    "\n",
     "    allsprites = pygame.sprite.Group()\n",
     "\n",
     "    d1 = Drone(100,300,0,1)\n",
@@ -338,6 +349,8 @@
     "    drones = pygame.sprite.Group()\n",
     "    drones.add(d1,d2,d3,d4,d5,d6)\n",
     "    allsprites.add(d1,d2,d3,d4,d5,d6)\n",
+    "\n",
+    "    dronelist = [d1,d2,d3,d4,d5,d6]\n",
     "\n",
     "    ygoal = np.random.randint(150,450)\n",
     "    endgoal = Goal(750,ygoal,0)\n",
@@ -376,7 +389,9 @@
     "        for entity in allsprites:\n",
     "            screen.blit(entity.surf, entity.rect)\n",
     "            \n",
-    "        for entity in drones:    \n",
+    "        for entity in drones:\n",
+    "            if pygame.sprite.spritecollideany(entity, obstacles):\n",
+    "                entity.kill()    \n",
     "            for entity2 in drones:\n",
     "                if entity != entity2 and pygame.sprite.collide_rect(entity, entity2):\n",
     "                    entity.kill()\n",
@@ -384,22 +399,52 @@
     "\n",
     "        pygame.display.flip()\n",
     "\n",
+    "        for i in range(len(dronelist)):\n",
+    "            entity = dronelist[i]\n",
+    "            if entity.alive():\n",
+    "                posarr[counter,i] = [entity.rect.left,entity.rect.top,0]\n",
+    "            else:\n",
+    "                posarr[counter,i] = [-1,-1,-1]\n",
+    "\n",
     "        counter += 1\n",
     "        if counter >= maxlen:\n",
     "            running = False\n",
     "\n",
     "        clock.tick(60)\n",
     "\n",
-    "    pygame.quit()"
+    "    pygame.quit()\n",
+    "    return posarr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "onesim(500)"
+    "x=onesim(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[152.   1.   0.]\n",
+      " [ 35.   1.   0.]\n",
+      " [184.   1.   0.]\n",
+      " [ -1.  -1.  -1.]\n",
+      " [ -1.  -1.  -1.]\n",
+      " [ -1.  -1.  -1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x[99])"
    ]
   },
   {
