Notebook cleaned of unnecessary code

--- a/swarmulator.ipynb
+++ b/swarmulator.ipynb
@@ -2,47 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#GOALS\n",
-    "#Create environment (perhaps at a pixel level) for simple drones to fly around in\n",
-    "#Create leader and follower drones\n",
-    "#Create destination\n",
-    "#Reward drones for moving towards destination (like in Hidden Identity paper)\n",
-    "#Create obstacle\n",
-    "#Punish drones for moving too close to obstacle?\n",
-    "#Find some way to reward drones for flying in formation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.1.2 (SDL 2.0.16, Python 3.8.16)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
-   "source": [
+    "#IMPORTS\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pygame\n",
-    "import random\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import random\n",
+    "\n",
     "from pygame.locals import (\n",
     "    RLEACCEL,\n",
     "    K_UP,\n",
@@ -52,148 +22,16 @@
     "    K_ESCAPE,\n",
     "    KEYDOWN,\n",
     "    QUIT,\n",
-    ")"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pygame.init()\n",
-    "\n",
-    "screen = pygame.display.set_mode([500, 500])\n",
-    "\n",
-    "running = True\n",
-    "while running:\n",
-    "\n",
-    "    for event in pygame.event.get():\n",
-    "        if event.type == pygame.QUIT:\n",
-    "            running = False\n",
-    "\n",
-    "    screen.fill((255,255,255))\n",
-    "\n",
-    "    pygame.draw.circle(screen, (0,0,255), (250,250), 75)\n",
-    "\n",
-    "    pygame.display.flip()\n",
-    "\n",
-    "pygame.quit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pygame.init()\n",
-    "\n",
-    "class Player(pygame.sprite.Sprite):\n",
-    "    def __init__(self):\n",
-    "        super(Player, self).__init__()\n",
-    "        self.surf = pygame.Surface((75, 25))\n",
-    "        self.surf.fill((255, 255, 255))\n",
-    "        self.rect = self.surf.get_rect()\n",
-    "\n",
-    "    def update(self, pressed_keys):\n",
-    "        if pressed_keys[K_UP]:\n",
-    "            self.rect.move_ip(0,-5)\n",
-    "        if pressed_keys[K_DOWN]:\n",
-    "            self.rect.move_ip(0,5)\n",
-    "        if pressed_keys[K_LEFT]:\n",
-    "            self.rect.move_ip(-5,0)\n",
-    "        if pressed_keys[K_RIGHT]:\n",
-    "            self.rect.move_ip(5,0)\n",
-    "\n",
-    "        if self.rect.left < 0:\n",
-    "            self.rect.left = 0\n",
-    "        if self.rect.right > SCREEN_WIDTH:\n",
-    "            self.rect.right = SCREEN_WIDTH\n",
-    "        if self.rect.top <= 0:\n",
-    "            self.rect.top = 0\n",
-    "        if self.rect.bottom >= SCREEN_HEIGHT:\n",
-    "            self.rect.bottom = SCREEN_HEIGHT\n",
-    "\n",
-    "class Enemy(pygame.sprite.Sprite):\n",
-    "    def __init__(self):\n",
-    "        super(Enemy, self).__init__()\n",
-    "        self.surf = pygame.Surface((20,10))\n",
-    "        self.surf.fill((255,0,0))\n",
-    "        self.rect = self.surf.get_rect(\n",
-    "            center=(\n",
-    "                random.randint(SCREEN_WIDTH + 20, SCREEN_WIDTH + 100),\n",
-    "                random.randint(0, SCREEN_HEIGHT),\n",
-    "            )\n",
-    "        )\n",
-    "        self.speed = random.randint(5,20)\n",
-    "\n",
-    "    def update(self):\n",
-    "        self.rect.move_ip(-self.speed, 0)\n",
-    "        if self.rect.right < 0:\n",
-    "            self.kill()\n",
-    "\n",
-    "clock = pygame.time.Clock()\n",
-    "\n",
-    "SCREEN_WIDTH = 800\n",
-    "SCREEN_HEIGHT = 600\n",
-    "\n",
-    "screen = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
-    "\n",
-    "ADDENEMY = pygame.USEREVENT + 1\n",
-    "pygame.time.set_timer(ADDENEMY, 250)\n",
-    "\n",
-    "player = Player()\n",
-    "\n",
-    "enemies = pygame.sprite.Group()\n",
-    "all_sprites = pygame.sprite.Group()\n",
-    "all_sprites.add(player)\n",
-    "\n",
-    "running = True\n",
-    "\n",
-    "while running:\n",
-    "    for event in pygame.event.get():\n",
-    "        if event.type == KEYDOWN:\n",
-    "            if event.key == K_ESCAPE:\n",
-    "                running = False\n",
-    "\n",
-    "        elif event.type == QUIT:\n",
-    "            running = False\n",
-    "\n",
-    "        elif event.type == ADDENEMY:\n",
-    "            new_enemy = Enemy()\n",
-    "            enemies.add(new_enemy)\n",
-    "            all_sprites.add(new_enemy)\n",
-    "\n",
-    "    pressed_keys = pygame.key.get_pressed()\n",
-    "\n",
-    "    player.update(pressed_keys)\n",
-    "\n",
-    "    enemies.update()\n",
-    "\n",
-    "    screen.fill((0,0,0))\n",
-    "\n",
-    "    for entity in all_sprites:\n",
-    "        screen.blit(entity.surf, entity.rect)\n",
-    "\n",
-    "    if pygame.sprite.spritecollideany(player, enemies):\n",
-    "        player.kill()\n",
-    "        running = False\n",
-    "\n",
-    "    pygame.display.flip()\n",
-    "\n",
-    "    clock.tick(60)\n",
-    "\n",
-    "pygame.quit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pygame.init()\n",
+    "#CLASS DEFINITIONS\n",
     "\n",
     "class Drone(pygame.sprite.Sprite):\n",
     "    def __init__(self, xi, yi, zi, mode):\n",
@@ -287,70 +125,17 @@
     "        elif self.dir == \"d\":\n",
     "            self.rect.move_ip(0,1)\n",
     "\n",
-    "        \n",
-    "\n",
-    "            \n",
-    "\n",
-    "#clock = pygame.time.Clock()\n",
-    "\n",
-    "#SCREEN_WIDTH = 800\n",
-    "#SCREEN_HEIGHT = 600\n",
-    "\n",
-    "#screen = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
-    "\n",
-    "#d1 = Drone(100,300,0)\n",
-    "#d2 = Drone(50,200,0)\n",
-    "#d3 = Drone(75,250,0)\n",
-    "#d4 = Drone(60,300,0)\n",
-    "#d5 = Drone(90,400,0)\n",
-    "#d6 = Drone(100,500,0)\n",
-    "\n",
-    "#drones = pygame.sprite.Group()\n",
-    "#drones.add(d1,d2,d3,d4,d5,d6)\n",
-    "\n",
-    "#running = True\n",
-    "\n",
-    "#counter = 0\n",
-    "\n",
-    "#while running:\n",
-    "#    for event in pygame.event.get():\n",
-    "#        if event.type == KEYDOWN:\n",
-    "#            if event.key == K_ESCAPE:\n",
-    "#                running = False\n",
-    "#\n",
-    "#        elif event.type == QUIT:\n",
-    "#            running = False\n",
-    "#\n",
-    "#    drones.update()\n",
-    "#\n",
-    "#    screen.fill((0,0,0))\n",
-    "#\n",
-    "#    for entity in drones:\n",
-    "#        screen.blit(entity.surf, entity.rect)\n",
-    "#        for entity2 in drones:\n",
-    "#            if entity != entity2 and pygame.sprite.collide_rect(entity, entity2):\n",
-    "#                entity.kill()\n",
-    "#                entity2.kill()\n",
-    "#\n",
-    "#    pygame.display.flip()\n",
-    "#\n",
-    "#    counter += 1\n",
-    "#    if counter >= 500:\n",
-    "#        running = False\n",
-    "#\n",
-    "#    clock.tick(60)\n",
-    "\n",
-    "\n",
-    "\n",
-    "#pygame.quit()"
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#OBSERVE() DEFINITION\n",
+    "\n",
     "def observe(entity,spritesgroup,dist,scansgroup,ogroup,ggroup,dgroup):\n",
     "    l=entity.rect.left\n",
     "    lx=l-1\n",
@@ -419,10 +204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#ONESIM() DEFINITION\n",
+    "\n",
     "def onesim(maxlen):\n",
     "    pygame.init()\n",
     "\n",
@@ -516,53 +303,7 @@
     "                if entity != entity2 and pygame.sprite.collide_rect(entity, entity2):\n",
     "                    entity.kill()\n",
     "                    entity2.kill()\n",
-    "\n",
-    "        \"\"\"for entity in drones:\n",
-    "            l=entity.rect.left\n",
-    "            lx=l-1\n",
-    "            r=entity.rect.right\n",
-    "            t=entity.rect.top\n",
-    "            tx=t-1\n",
-    "            b=entity.rect.bottom\n",
-    "\n",
-    "            results = np.array([[0,0],[0,0],[0,0],[0,0]])\n",
-    "\n",
-    "            rscan = Scanner(r,t,1,10,\"r\")\n",
-    "            uscan = Scanner(l,tx,10,1,\"u\")\n",
-    "            lscan = Scanner(lx,t,1,10,\"l\")\n",
-    "            dscan = Scanner(l,b,10,1,\"d\")\n",
-    "            scans.add(rscan,uscan,lscan,dscan)\n",
-    "\n",
-    "            for i in range(100):\n",
-    "                rscan.update()\n",
-    "                if pygame.sprite.spritecollideany(rscan,allsprites):\n",
-    "                    results[0] = [1,i]\n",
-    "                    break\n",
-    "\n",
-    "            for i in range(100):\n",
-    "                uscan.update()\n",
-    "                if pygame.sprite.spritecollideany(uscan,allsprites):\n",
-    "                    results[1] = [1,i]\n",
-    "                    break\n",
-    "\n",
-    "            for i in range(100):\n",
-    "                lscan.update()\n",
-    "                if pygame.sprite.spritecollideany(lscan,allsprites):\n",
-    "                    results[2] = [1,i]\n",
-    "                    break\n",
-    "\n",
-    "            for i in range(100):\n",
-    "                dscan.update()\n",
-    "                if pygame.sprite.spritecollideany(dscan,allsprites):\n",
-    "                    results[3] = [1,i]\n",
-    "                    break\n",
-    "\n",
-    "            for entity in scans:\n",
-    "                entity.kill()\n",
-    "\n",
-    "            print(results)\"\"\"\n",
-    "            \n",
-    "\n",
+    "    \n",
     "        pygame.display.flip()\n",
     "\n",
     "        dead = 0\n",
@@ -595,7 +336,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MULTISIM() DEFINITION\n",
+    "\n",
+    "def multisim(numsims,maxlen):\n",
+    "    multisimlist = []\n",
+    "    for i in range(numsims):\n",
+    "        x=onesim(maxlen)\n",
+    "        multisimlist.append(x)\n",
+    "    multisimlist=np.array(multisimlist)\n",
+    "\n",
+    "    return multisimlist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -626,6 +385,126 @@
       " [0 0]\n",
       " [0 0]\n",
       " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [3 9]\n",
+      " [0 0]]\n",
+      "[[ 0  0]\n",
+      " [ 0  0]\n",
+      " [ 0  0]\n",
+      " [ 3 41]]\n",
+      "[[ 0  0]\n",
+      " [ 3 41]\n",
+      " [ 0  0]\n",
+      " [ 3 44]]\n",
+      "[[ 3  9]\n",
+      " [ 3 44]\n",
+      " [ 0  0]\n",
+      " [ 0  0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [3 1]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [3 1]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[3 3]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [3 3]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
       "[[ 0  0]\n",
       " [ 0  0]\n",
       " [ 3 29]\n",
@@ -634,84 +513,8 @@
       " [0 0]\n",
       " [0 0]\n",
       " [0 0]]\n",
-      "[[ 0  0]\n",
-      " [ 0  0]\n",
-      " [ 0  0]\n",
-      " [ 3 49]]\n",
       "[[ 3 29]\n",
-      " [ 3 49]\n",
       " [ 0  0]\n",
-      " [ 0  0]]\n",
-      "[[0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]]\n",
-      "[[0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]]\n",
-      "[[ 0  0]\n",
-      " [ 0  0]\n",
-      " [ 3 11]\n",
-      " [ 3 81]]\n",
-      "[[0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]]\n",
-      "[[ 0  0]\n",
-      " [ 0  0]\n",
-      " [ 0  0]\n",
-      " [ 3 48]]\n",
-      "[[ 3 11]\n",
-      " [ 3 48]\n",
-      " [ 0  0]\n",
-      " [ 0  0]]\n",
-      "[[ 0  0]\n",
-      " [ 3 81]\n",
-      " [ 0  0]\n",
-      " [ 0  0]]\n",
-      "[[0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]]\n",
-      "[[ 0  0]\n",
-      " [ 0  0]\n",
-      " [ 0  0]\n",
-      " [ 3 44]]\n",
-      "[[ 0  0]\n",
-      " [ 3 44]\n",
-      " [ 0  0]\n",
-      " [ 0  0]]\n",
-      "[[0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]]\n",
-      "[[0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]]\n",
-      "[[ 0  0]\n",
-      " [ 0  0]\n",
-      " [ 0  0]\n",
-      " [ 3 44]]\n",
-      "[[ 0  0]\n",
-      " [ 3 44]\n",
-      " [ 0  0]\n",
-      " [ 0  0]]\n",
-      "[[0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]]\n",
-      "[[0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]]\n",
-      "[[ 0  0]\n",
-      " [ 0  0]\n",
-      " [ 0  0]\n",
-      " [ 3 60]]\n",
-      "[[ 0  0]\n",
-      " [ 3 60]\n",
       " [ 0  0]\n",
       " [ 0  0]]\n",
       "[[0 0]\n",
@@ -734,17 +537,13 @@
       " [0 0]\n",
       " [0 0]\n",
       " [0 0]]\n",
-      "[[0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]]\n",
-      "[[ 0  0]\n",
+      "[[ 3 68]\n",
       " [ 0  0]\n",
       " [ 0  0]\n",
-      " [ 3 68]]\n",
+      " [ 0  0]]\n",
       "[[ 0  0]\n",
+      " [ 0  0]\n",
       " [ 3 68]\n",
-      " [ 0  0]\n",
       " [ 0  0]]\n",
       "[[0 0]\n",
       " [0 0]\n",
@@ -754,6 +553,22 @@
       " [0 0]\n",
       " [0 0]\n",
       " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[ 3 77]\n",
+      " [ 0  0]\n",
+      " [ 0  0]\n",
+      " [ 0  0]]\n",
+      "[[ 0  0]\n",
+      " [ 0  0]\n",
+      " [ 3 77]\n",
+      " [ 0  0]]\n",
       "[[0 0]\n",
       " [0 0]\n",
       " [0 0]\n",
@@ -813,22 +628,6 @@
    ],
    "source": [
     "print(x[99])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def multisim(numsims,maxlen):\n",
-    "    multisimlist = []\n",
-    "    for i in range(numsims):\n",
-    "        x=onesim(maxlen)\n",
-    "        multisimlist.append(x)\n",
-    "    multisimlist=np.array(multisimlist)\n",
-    "\n",
-    "    return multisimlist"
    ]
   },
   {
