Fixed some issues with A* algoithm. Still very janky

--- a/swarmulator.ipynb
+++ b/swarmulator.ipynb
@@ -1792,16 +1792,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[84, 295]]\n",
-      "745 231\n",
-      "((254, 96), (540, 229))\n"
+      "[[46, 295]]\n",
+      "745 160\n",
+      "((286, 133), (540, 71))\n"
      ]
     }
    ],
@@ -1910,7 +1910,7 @@
     "\n",
     "    commands = [0]\n",
     "\n",
-    "    for a in ['r','u','l','d']:\n",
+    "    for a in ['u','d','r','l']:\n",
     "        commands[0] = a\n",
     "\n",
     "        for i in range(len(dronelist)):\n",
@@ -1935,6 +1935,77 @@
     "                        \n",
     "\n",
     "        dronepos = [[d1.rect.left,d1.rect.top]]\n",
+    "\n",
+    "        if crash == 0 and dronepos in states.values():\n",
+    "            ID = [k for k, v in states.items() if v == dronepos]\n",
+    "            if len(ID) > 1:\n",
+    "                print('You are about to encounter some never before seen errors')\n",
+    "            ID = ID[0]\n",
+    "            if ID in priorityqueue and ID in donequeue:\n",
+    "                print('Not good')\n",
+    "\n",
+    "\n",
+    "            elif ID in priorityqueue:\n",
+    "                pos = priorityqueue.index(ID)\n",
+    "                newdist = currentdist + 10\n",
+    "                if newdist < distlist[pos]:\n",
+    "                    x = priorityqueue.pop(pos)\n",
+    "                    y = distlist.pop(pos)\n",
+    "                    y = currentdist + 10\n",
+    "                    z = potlist.pop(pos)\n",
+    "                    w = astarlist.pop(pos)\n",
+    "                    w = y + z\n",
+    "\n",
+    "                    sources[ID] = currentID\n",
+    "\n",
+    "                    if w >= astarlist[-1]:\n",
+    "                        priorityqueue.append(x)\n",
+    "                        distlist.append(y)\n",
+    "                        potlist.append(z)\n",
+    "                        astarlist.append(w)\n",
+    "                    else:\n",
+    "                        for i in range(1,len(astarlist)):\n",
+    "                            if w <= astarlist[i]:\n",
+    "                                index=i\n",
+    "                                priorityqueue.insert(index,x)\n",
+    "                                distlist.insert(index,y)\n",
+    "                                potlist.insert(index,z)\n",
+    "                                astarlist.insert(index,w)\n",
+    "                                break\n",
+    "\n",
+    "\n",
+    "\n",
+    "            elif ID in donequeue:\n",
+    "                pos = donequeue.index(ID)\n",
+    "                newdist = currentdist + 10\n",
+    "                if newdist < donedistlist[pos]:\n",
+    "                    x = donequeue.pop(pos)\n",
+    "                    y = donedistlist.pop(pos)\n",
+    "                    y = currentdist + 10\n",
+    "                    z = donepotlist.pop(pos)\n",
+    "                    w = doneastarlist.pop(pos)\n",
+    "                    w = y + z\n",
+    "\n",
+    "                    sources[ID] = currentID\n",
+    "\n",
+    "                    if w >= astarlist[-1]:\n",
+    "                        priorityqueue.append(x)\n",
+    "                        distlist.append(y)\n",
+    "                        potlist.append(z)\n",
+    "                        astarlist.append(w)\n",
+    "                    else:\n",
+    "                        for i in range(1,len(astarlist)):\n",
+    "                            if w <= astarlist[i]:\n",
+    "                                index=i\n",
+    "                                priorityqueue.insert(index,x)\n",
+    "                                distlist.insert(index,y)\n",
+    "                                potlist.insert(index,z)\n",
+    "                                astarlist.insert(index,w)\n",
+    "                                break\n",
+    "\n",
+    "\n",
+    "            else:\n",
+    "                print('Not good')\n",
     "            \n",
     "\n",
     "        if crash == 0 and dronepos not in states.values():\n",
@@ -1962,6 +2033,7 @@
     "\n",
     "            counter += 1\n",
     "            #print(counter)\n",
+    "\n",
     "\n",
     "        for i in range(len(dronelist)):\n",
     "            entity = dronelist[i]\n",
@@ -2009,14 +2081,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1711, 1708, 1705, 1702, 1699, 1696, 1693, 1690, 1687, 1684, 1681, 1678, 1675, 1672, 1669, 1666, 1664, 1662, 1661, 1657, 1655, 1653, 1651, 1497, 1085, 1082, 1079, 1076, 1073, 1070, 1067, 1064, 1061, 1058, 1055, 1052, 1049, 1046, 1043, 1040, 1037, 1034, 1031, 1028, 1025, 1022, 1019, 1016, 1014, 1012, 1011, 1009, 1007, 1005, 1003, 1001, 999, 997, 995, 993, 991, 989, 987, 985, 983, 981, 978, 975, 973, 971, 871, 771, 544, 488, 434, 382, 332, 284, 238, 194, 152, 150, 148, 146, 144, 142, 140, 138, 136, 134, 132, 130, 128, 126, 124, 5, 1, 0]\n"
+      "[2529, 2525, 2522, 2519, 2516, 2513, 2510, 2507, 2504, 2502, 2500, 2498, 2495, 2492, 2489, 2486, 2483, 2480, 2477, 2474, 2471, 2468, 2465, 2462, 2459, 2456, 2453, 2450, 2447, 2445, 2443, 2441, 2231, 1904, 1744, 1584, 1424, 766, 765, 762, 759, 756, 753, 750, 747, 744, 741, 738, 735, 732, 729, 726, 723, 720, 717, 714, 711, 708, 705, 702, 699, 697, 695, 623, 554, 487, 422, 96, 94, 92, 90, 88, 86, 84, 82, 80, 78, 76, 74, 73, 71, 70, 67, 64, 61, 58, 55, 52, 49, 46, 43, 40, 37, 34, 31, 28, 25, 22, 19, 16, 13, 10, 7, 3, 0]\n"
      ]
     }
    ],
@@ -2037,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2133,16 +2205,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def goodformation(dronepos):\n",
+    "    penalty = 0\n",
+    "    for i in range(len(dronepos)):\n",
+    "        for j in range(i,len(dronepos)):\n",
+    "            dist = abs(dronepos[i][0]-dronepos[j][0]) + abs(dronepos[i][1]-dronepos[j][1])\n",
+    "            if dist >= 50:\n",
+    "                penalty += dist\n",
+    "\n",
+    "    return penalty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[94, 270], [53, 320]]\n",
-      "745 439\n",
-      "((349, 187), (540, 176))\n"
+      "[[54, 270], [47, 320]]\n",
+      "745 401\n",
+      "((346, 274), (540, 53))\n"
      ]
     }
    ],
@@ -2252,9 +2341,9 @@
     "\n",
     "    commands = [0,0]\n",
     "\n",
-    "    for a in ['r','u','l','d']:\n",
+    "    for a in ['u','d','r','l']:\n",
     "        commands[0] = a\n",
-    "        for b in ['r','u','l','d']:\n",
+    "        for b in ['u','d','r','l']:\n",
     "            commands[1] = b\n",
     "\n",
     "\n",
@@ -2280,6 +2369,79 @@
     "                        \n",
     "\n",
     "            dronepos = [[d1.rect.left,d1.rect.top],[d2.rect.left,d2.rect.top]]\n",
+    "\n",
+    "            penalty = goodformation(dronepos)\n",
+    "\n",
+    "            \"\"\"if crash == 0 and dronepos in states.values():\n",
+    "                ID = [k for k, v in states.items() if v == dronepos]\n",
+    "                if len(ID) > 1:\n",
+    "                    print('You are about to encounter some never before seen errors')\n",
+    "                ID = ID[0]\n",
+    "                if ID in priorityqueue and ID in donequeue:\n",
+    "                    print('Not good')\n",
+    "\n",
+    "\n",
+    "                elif ID in priorityqueue:\n",
+    "                    pos = priorityqueue.index(ID)\n",
+    "                    newdist = currentdist + 1\n",
+    "                    if newdist < distlist[pos]:\n",
+    "                        x = priorityqueue.pop(pos)\n",
+    "                        y = distlist.pop(pos)\n",
+    "                        y = currentdist + 1\n",
+    "                        z = potlist.pop(pos)\n",
+    "                        w = astarlist.pop(pos)\n",
+    "                        w = y + z\n",
+    "\n",
+    "                        sources[ID] = currentID\n",
+    "\n",
+    "                        if w >= astarlist[-1]:\n",
+    "                            priorityqueue.append(x)\n",
+    "                            distlist.append(y)\n",
+    "                            potlist.append(z)\n",
+    "                            astarlist.append(w)\n",
+    "                        else:\n",
+    "                            for i in range(1,len(astarlist)):\n",
+    "                                if w <= astarlist[i]:\n",
+    "                                    index=i\n",
+    "                                    priorityqueue.insert(index,x)\n",
+    "                                    distlist.insert(index,y)\n",
+    "                                    potlist.insert(index,z)\n",
+    "                                    astarlist.insert(index,w)\n",
+    "                                    break\n",
+    "\n",
+    "\n",
+    "\n",
+    "                elif ID in donequeue:\n",
+    "                    pos = donequeue.index(ID)\n",
+    "                    newdist = currentdist + 1\n",
+    "                    if newdist < donedistlist[pos]:\n",
+    "                        x = donequeue.pop(pos)\n",
+    "                        y = donedistlist.pop(pos)\n",
+    "                        y = currentdist + 1\n",
+    "                        z = donepotlist.pop(pos)\n",
+    "                        w = doneastarlist.pop(pos)\n",
+    "                        w = y + z\n",
+    "\n",
+    "                        sources[ID] = currentID\n",
+    "\n",
+    "                        if w >= astarlist[-1]:\n",
+    "                            priorityqueue.append(x)\n",
+    "                            distlist.append(y)\n",
+    "                            potlist.append(z)\n",
+    "                            astarlist.append(w)\n",
+    "                        else:\n",
+    "                            for i in range(1,len(astarlist)):\n",
+    "                                if w <= astarlist[i]:\n",
+    "                                    index=i\n",
+    "                                    priorityqueue.insert(index,x)\n",
+    "                                    distlist.insert(index,y)\n",
+    "                                    potlist.insert(index,z)\n",
+    "                                    astarlist.insert(index,w)\n",
+    "                                    break\n",
+    "\n",
+    "\n",
+    "                else:\n",
+    "                    print('Not good')\"\"\"\n",
     "            \n",
     "\n",
     "            if crash == 0 and dronepos not in states.values():\n",
@@ -2354,14 +2516,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[25356, 25342, 25328, 25314, 25300, 25286, 25272, 25258, 25244, 25230, 25216, 25202, 25188, 25175, 25165, 25159, 25151, 25142, 25132, 25121, 25114, 25107, 25091, 25089, 25077, 23369, 20766, 20357, 20297, 20279, 20264, 20250, 20236, 20222, 20208, 20194, 20180, 20166, 20152, 20138, 20125, 20115, 20109, 20101, 20092, 20085, 20074, 20063, 20056, 20048, 20038, 14436, 9662, 7638, 2319, 1034, 790, 563, 548, 543, 524, 511, 498, 485, 472, 459, 446, 433, 420, 407, 394, 381, 368, 355, 342, 329, 316, 303, 290, 277, 264, 251, 239, 226, 222, 207, 192, 178, 166, 151, 136, 121, 106, 91, 76, 61, 46, 31, 16, 0]\n"
+      "[1379, 1373, 1355, 1349, 1331, 1325, 1307, 1301, 1283, 1277, 1259, 1253, 1235, 1229, 1211, 1205, 1187, 1181, 1163, 1157, 1139, 1133, 1115, 1109, 1091, 1085, 1070, 1066, 1046, 1041, 1026, 1022, 1008, 976, 951, 942, 931, 924, 913, 906, 895, 888, 877, 870, 859, 852, 841, 834, 823, 816, 805, 798, 787, 780, 769, 762, 751, 744, 733, 726, 715, 708, 700, 696, 682, 675, 667, 663, 655, 651, 642, 627, 622, 616, 606, 599, 581, 572, 555, 540, 525, 510, 495, 480, 465, 450, 435, 420, 405, 390, 375, 360, 345, 330, 315, 300, 285, 270, 255, 240, 225, 211, 196, 192, 177, 162, 147, 133, 121, 106, 91, 76, 61, 46, 31, 16, 0]\n"
      ]
     }
    ],
@@ -2382,7 +2544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
